# BevSplat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
kitti_main/: README.md  __init__.py  config.py  data.py  eval.py  losses.py  model.py  train.py
scripts/: bootstrap_cuda.sh
vigor_main/: README.md  __init__.py  config.py  data.py  eval.py  losses.py  model.py  train.py
